--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <div class="container_media_side" id="hidden_desktop" role="img">
                     <img class="img-fluid rounded-circle" id="hidden_desktop" src="img/LogoStreicher.png" alt="">
                     <p class="blocksatz bold">Streicher
-                        <br>Mittwochs, 18:30-21:00</p>
+                        <br>Donnerstags, 18:30-21:00</p>
                 </div>
 
                 <!-- desktop flex item 2 -->
@@ -203,7 +203,7 @@
                     </div>
 
                     <p class="blocksatz">
-                        Mittwochs, 18:30-21:00
+                        Donnerstags, 18:30-21:00
                     </p>
                 </div>
 
