blech infos hinzugefuegt

--- a/index.html
+++ b/index.html
@@ -115,23 +115,27 @@
 
                 <!-- mobile flex item 2 -->
                 <div class="container_media_side" id="hidden_desktop" role="img">
-                    <img class="img-fluid rounded-circle" id="hidden_desktop" src="img/LogoBlech.png" alt="">
-                    <p class="blocksatz bold">Blechbläser
-                        <br> Mittwochs, 18:30-21:00
-                    </p>
+                    <a href="indexBlech.html">
+                        <img class="img-fluid rounded-circle" id="hidden_desktop" src="img/LogoBlech.png" alt="">
+                        <p class="blocksatz bold">Blechbläser
+                            <br> Mittwochs, 18:30-21:00
+                        </p>
+                    </a>
                 </div>
 
                 <!-- desktop flex item 2 -->
 
                 <div class="container_side hidden_mobile" role="contentinfo">
-                    <p class="blocksatz bold">Blechbläser</p>
-                    <div class="bild_logo " role="img">
-                        <img class="img-fluid rounded-circle " src="img/LogoBlech.png" alt="">
-                    </div>
+                    <a href="indexBlech.html">
+                        <p class="blocksatz bold">Blechbläser</p>
+                        <div class="bild_logo " role="img">
+                            <img class="img-fluid rounded-circle " src="img/LogoBlech.png" alt="">
+                        </div>
 
-                    <p class="blocksatz">
-                        Mittwochs, 18:30-21:00
-                    </p>
+                        <p class="blocksatz">
+                            Mittwochs, 18:30-21:00
+                        </p>
+                    </a>
                 </div>
 
                 <!-- mobile flex item 3 -->
@@ -246,7 +250,8 @@
                 <!-- flex item 1 -->
                 <div class="container_side" role="contentinfo">
 
-                    <p class="blocksatz"> Unsere Proben finden in der Lessingschule, Kirchstrasse 26 in Pfungstadt statt.
+                    <p class="blocksatz"> Unsere Proben finden in der Lessingschule, Kirchstrasse 26 in Pfungstadt
+                        statt.
                         Die jeweiligen Tage bzw. Zeiten der Ensembles sind oben angegeben.
                         Sax Plus pausiert gerade und die Fusion Band probt nur 14-tägig.
                         <br>
