--- a/indexBlech.html
+++ b/indexBlech.html
@@ -60,6 +60,9 @@
 </nav>
 
 <!-- Intro Header -->
+<header class="landingpageBlech">
+    <!-- bild ist im css -->
+</header>
 
 
 <!-- Info Section -->
@@ -67,8 +70,6 @@
     <div class="container">
 
         <h2 class="center">
-            <br>
-            <br>
             Infos</h2>
         <!-- smaller container for orchester part, change background color -->
         <div class="container background-medium roundedCorners">
