--- a/indexBlech.html
+++ b/indexBlech.html
@@ -75,7 +75,7 @@
         <div class="container background-medium roundedCorners">
 
             <!-- title -->
-<!--            <h1 class="header_left hidden_mobile">Die Band</h1>-->
+            <!--            <h1 class="header_left hidden_mobile">Die Band</h1>-->
             <!-- flexbox container -->
             <section class="info-section-background">
 
@@ -123,87 +123,90 @@
             </section>
 
 
-
         </div>
 
 
+        <!-- Galery Section -->
+        <section id="galery" class="background-medium termine-section content-section text-center">
+            <div class="container background-medium">
+                <div class="col-md-10 mx-auto galery roundedCorners">
+                    <h2>Galerie</h2>
 
-<!-- Galery Section -->
-<section id="galery" class="background-medium termine-section content-section text-center">
-    <div class="container background-medium">
-        <div class="col-md-10 mx-auto galery roundedCorners">
-            <h2>Galerie</h2>
-
-            <div class="wrapper">
-                <!-- JUMBOTRON -->
-                <div class="carousel">
-                    <div class="jumbotron jumbotron-blech1"></div>
-                    <div class="jumbotron jumbotron-blech2"></div>
+                    <div class="wrapper">
+                        <!-- JUMBOTRON -->
+                        <div class="carousel">
+                            <div class="jumbotron jumbotron-blech1"></div>
+                            <div class="jumbotron jumbotron-blech2"></div>
+                            <div class="jumbotron jumbotron-blech3"></div>
+                        </div>
+                        <!-- transparent div with buttons -->
+                        <div id="transparent" class="gallery-nav hidden_mobile">
+                            <a class="button prev"><</a>
+                            <a class="button next">></a>
+                        </div>
+                    </div>
                 </div>
-                <!-- transparent div with buttons -->
-                <div id="transparent" class="gallery-nav hidden_mobile">
-                    <a class="button prev"><</a>
-                    <a class="button next">></a>
+            </div>
+        </section>
+
+        <!-- Contact Section -->
+
+        <section id="contact" class="content-section text-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 mx-auto">
+                        <h2>Kontakt</h2>
+                        Peter Leisemann
+                        <br>
+                        peter.leisemann@t-online.de
+                        <br>
+                        06251/790217
+
+                        </p>
+
+
+                    </div>
                 </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- Contact Section -->
-
-<section id="contact" class="content-section text-center">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 mx-auto">
-                <h2>Kontakt</h2>
-Peter Leisemann
-                <br>06251/790217
-
-                </p>
-
 
             </div>
-        </div>
-
-    </div>
-</section>
+        </section>
 
 
-<!-- Footer -->
-<footer class="content-section ">
+        <!-- Footer -->
+        <footer class="content-section ">
 
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 mx-auto">
-                <p class="center">
-                    <a href="impressum.html">Impressum</a>
-                    <a href="datenschutz.html">Datenschutzerklärung</a>
-                </p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 mx-auto">
+                        <p class="center">
+                            <a href="impressum.html">Impressum</a>
+                            <a href="datenschutz.html">Datenschutzerklärung</a>
+                        </p>
+                    </div>
+                </div>
+
             </div>
-        </div>
-
-    </div>
 
 
-</footer>
+        </footer>
 
-<!-- Bootstrap core JavaScript -->
-<script src="vendor/jquery/jquery.min.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <!-- Bootstrap core JavaScript -->
+        <script src="vendor/jquery/jquery.min.js"></script>
+        <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-<!-- Plugin JavaScript -->
-<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+        <!-- Plugin JavaScript -->
+        <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-<!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script> -->
+        <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
+        <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script> -->
 
-<!-- slick -->
-<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.0/slick/slick.min.js"></script>
+        <!-- slick -->
+        <script type="text/javascript"
+                src="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.0/slick/slick.min.js"></script>
 
-<!-- Custom scripts for this template -->
-<script src="js/grayscale.js"></script>
-<script src="js/main.js"></script>
+        <!-- Custom scripts for this template -->
+        <script src="js/grayscale.js"></script>
+        <script src="js/main.js"></script>
 
 </body>
 
