--- a/impressum.html
+++ b/impressum.html
@@ -78,7 +78,7 @@
                         Gerold Arheilger & Katrin Rose (Webmaster)
                     </p>
                     <p><strong>Bildrechte:</strong>
-                        <br/> Malte Kirsch (Foto Pfungo)<br/>
+                        <br/> Malte Kirsch (Foto Phungo)<br/>
                         <br/></p>
                 </div>
 
