--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@
                 <div class="carousel">
                     <div class="jumbotron jumbotron-orchester1"></div>
                     <div class="jumbotron jumbotron-orchester2"></div>
+                    <div class="jumbotron jumbotron-blech3"></div>
                 </div>
                 <!-- transparent div with buttons -->
                 <div id="transparent" class="gallery-nav hidden_mobile">
