--- a/index.html
+++ b/index.html
@@ -252,8 +252,11 @@
 
                     <p class="blocksatz"> Unsere Proben finden in der Lessingschule, Kirchstrasse 26 in Pfungstadt
                         statt.
-                        Die jeweiligen Tage bzw. Zeiten der Ensembles sind oben angegeben.
-                        Sax Plus pausiert gerade und die Fusion Band probt nur 14-tägig.
+                        Die Probentage bzw. Zeiten findet ihr unter den jeweiligen Ensembleinfos.
+                        Hinweis: Sax Plus pausiert gerade und die Fusion Band probt nur 14-tägig.
+                        <br>
+                        <br>
+                        Klicke auf Ensembles um mehr Infos zu sehen (aktuell nur Big Band und Blechbläser).
                         <br>
                         <br>
                         Hast du Interesse bei einem Ensemble mitzuspielen? Melde dich bei
