--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
                 <!-- flex item 1 -->
                 <div class="container_side" role="contentinfo">
 
-                    <p class="blocksatz"> Unsere Proben finden in der Lessingschule, Kirchstrasse 26 in Pfungstadt
-                        statt.
-                        Die Probentage bzw. Zeiten findet ihr unter den jeweiligen Ensembleinfos.
+`                    <p class="blocksatz">
+                        Unsere Proben finden in der Lessingschule, Kirchstrasse 26 in Pfungstadt
+                        statt. Die Probentage bzw. Zeiten findet ihr unter den jeweiligen Ensembleinfos.
                         Hinweis: Sax Plus pausiert gerade und die Fusion Band probt nur 14-tägig.
                         <br>
                         <br>
