--- a/indexBigBand.html
+++ b/indexBigBand.html
@@ -238,8 +238,9 @@
                         Du spielst ein Blas- oder Rhythmusinstrument, hast Spass an Jazz, Swing und Be-Bop-Musik und
                         suchst eine Band? Dann bist Du bei uns genau richtig!
 
-                        Wenn Du gerne mitmachen möchtest, dann komm‘ einfach mal in der Probe vorbei. Wir freuen
-                        uns auf Dich.
+                        Wenn Du gerne mitmachen möchtest, dann komm‘ einfach mal in der Probe vorbei. Oder schreib an
+                        musiker_gesucht[at]musikverein-pfungstadt.de. Wir freuen
+                        uns auf Dich!
 
                     </p>
                 </div>
