bigband index ausgelagert, fuer subdomain

--- a/BigBand/index.html
+++ b/BigBand/index.html
@@ -11,13 +11,13 @@
     <title>Big Band Pfungstadt</title>
 
     <!-- Reset -->
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="../css/reset.css">
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet"
           type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
@@ -26,7 +26,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.0/slick/slick.css"/>
 
     <!-- Custom styles for this template -->
-    <link href="css/grayscale.css" rel="stylesheet">
+    <link href="../css/grayscale.css" rel="stylesheet">
 
 </head>
 
@@ -108,7 +108,7 @@
                 </div>
                 <!-- flex item 2 -->
                 <div class="container_media_side" role="img">
-                    <img class="img-fluid rounded-circle hidden_mobile" src="img/LogoBigBand.jpg" alt="">
+                    <img class="img-fluid rounded-circle hidden_mobile" src="../img/LogoBigBand.jpg" alt="">
                 </div>
             </section>
 
@@ -116,14 +116,14 @@
             <section class="info-section-background">
 
                 <div id="hidden_desktop" role="img">
-                    <img class="img-fluid rounded-circle " id="hidden_desktop" src="img/LogoBigBand.jpg" alt="">
+                    <img class="img-fluid rounded-circle " id="hidden_desktop" src="../img/LogoBigBand.jpg" alt="">
                 </div>
 
 
                 <!-- new flex item line -->
                 <!-- flex item 1 -->
                 <div class="container_media_side" role="img">
-                    <img class="img-fluid rounded-circle hidden_mobile" src="img/TenorSax.png" alt="">
+                    <img class="img-fluid rounded-circle hidden_mobile" src="../img/TenorSax.png" alt="">
 <!--                    <img class="img-fluid rounded-circle hidden_mobile" src="img/AltSax.jpg" alt="">-->
                 </div>
                 <!-- flex item 2 -->
@@ -157,14 +157,14 @@
 
                 <!-- mobile flex item only -->
                 <div class="container_media_side" id="hidden_desktop" role="img">
-                    <img class="img-fluid rounded-circle" id="hidden_desktop" src="img/Jon.jpg" alt="">
+                    <img class="img-fluid rounded-circle" id="hidden_desktop" src="../img/Jon.jpg" alt="">
                 </div>
 
                 <!-- flex item 1 -->
 
                 <div class="container_side" role="contentinfo">
                     <div class="bild_xx hidden_mobile" role="img">
-                        <img class="img-fluid rounded-circle hidden_mobile" src="img/Jon.jpg" alt="">
+                        <img class="img-fluid rounded-circle hidden_mobile" src="../img/Jon.jpg" alt="">
                     </div>
 
                     <p class="blocksatz bold">Jon Wood
@@ -193,7 +193,7 @@
 
                 <div class="container_side" role="contentinfo">
                     <div class="bild_xx hidden_mobile" role="img">
-                        <img class="img-fluid rounded-circle hidden_mobile" src="img/Michael.jpg" alt="">
+                        <img class="img-fluid rounded-circle hidden_mobile" src="../img/Michael.jpg" alt="">
                     </div>
                     <p class="blocksatz bold">Michael Ruppersberg
                         <br>(stellvertretender Dirigent)
@@ -229,7 +229,7 @@
 
                     <!-- mobile flex item only -->
                     <div id="hidden_desktop" role="img">
-                        <img class="img-fluid rounded-circle" id="hidden_desktop" src="img/Probenort.png" alt="">
+                        <img class="img-fluid rounded-circle" id="hidden_desktop" src="../img/Probenort.png" alt="">
                     </div>
 
                     <h2 class="blocksatz">Mitmusiker gesucht!</h2>
@@ -246,7 +246,7 @@
                 </div>
                 <!-- flex item 2 -->
                 <div class="container_media_side" role="img">
-                    <img class="img-fluid rounded-circle hidden_mobile" src="img/Probenort.png" alt="">
+                    <img class="img-fluid rounded-circle hidden_mobile" src="../img/Probenort.png" alt="">
                 </div>
 
 
@@ -319,7 +319,7 @@
             </div>
 
 
-            <video class="hidden_mobile" src="video/bigBandInRossdorf082023.mp4"
+            <video class="hidden_mobile" src="../video/bigBandInRossdorf082023.mp4"
                    width="640" height="480"
                    autobuffer controls>
 
@@ -330,7 +330,7 @@
 
             </video>
 
-            <video id="hidden_desktop" src="video/bigBandInRossdorf082023.mp4"
+            <video id="hidden_desktop" src="../video/bigBandInRossdorf082023.mp4"
                    width="320" height="240"
                    autobuffer controls>
 
@@ -594,8 +594,8 @@
         <div class="row">
             <div class="col-lg-8 mx-auto">
                 <p class="center">
-                    <a href="impressum.html">Impressum</a>
-                    <a href="datenschutz.html">Datenschutzerklärung</a>
+                    <a href="../impressum.html">Impressum</a>
+                    <a href="../datenschutz.html">Datenschutzerklärung</a>
                 </p>
             </div>
         </div>
@@ -606,11 +606,11 @@
 </footer>
 
 <!-- Bootstrap core JavaScript -->
-<script src="vendor/jquery/jquery.min.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="../vendor/jquery/jquery.min.js"></script>
+<script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 <!-- Plugin JavaScript -->
-<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+<script src="../vendor/jquery-easing/jquery.easing.min.js"></script>
 
 <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
 <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script> -->
@@ -619,8 +619,8 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.0/slick/slick.min.js"></script>
 
 <!-- Custom scripts for this template -->
-<script src="js/grayscale.js"></script>
-<script src="js/main.js"></script>
+<script src="../js/grayscale.js"></script>
+<script src="../js/main.js"></script>
 
 </body>
 
