--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                 <!-- mobile flex item 1 -->
                 <div class="container_media_side" id="hidden_desktop" role="img">
-                    <a href="indexBigBand.html">
+                    <a href="BigBand/index.html">
                         <img class="img-fluid rounded-circle" id="hidden_desktop" src="img/LogoBigBand.jpg" alt="">
                         <p class="blocksatz bold">Big Band
                             <br>
@@ -99,7 +99,7 @@
                 <!-- desktop flex item 1 -->
 
                 <div class="container_side hidden_mobile" role="contentinfo">
-                    <a href="indexBigBand.html">
+                    <a href="BigBand/index.html">
                         <p class="blocksatz bold">Big Band</p>
 
                         <div class="bild_logo " role="img">
