--- a/BigBand/index.html
+++ b/BigBand/index.html
@@ -554,8 +554,9 @@
             <div class="wrapper">
                 <!-- JUMBOTRON -->
                 <div class="carousel">
-                    <div class="jumbotron jumbotron-orchester1"></div>
-                    <div class="jumbotron jumbotron-orchester2"></div>
+                    <div class="jumbotron jumbotron-bb1"></div>
+                    <div class="jumbotron jumbotron-bb2"></div>
+                    <div class="jumbotron jumbotron-bb3"></div>
                 </div>
                 <!-- transparent div with buttons -->
                 <div id="transparent" class="gallery-nav hidden_mobile">
