--- a/index.html
+++ b/index.html
@@ -291,8 +291,9 @@
             <div class="wrapper">
                 <!-- JUMBOTRON -->
                 <div class="carousel">
-                    <div class="jumbotron jumbotron-orchester1"></div>
-                    <div class="jumbotron jumbotron-orchester2"></div>
+                    <div class="jumbotron jumbotron-bb1"></div>
+                    <div class="jumbotron jumbotron-bb2"></div>
+                    <div class="jumbotron jumbotron-bb3"></div>
                     <div class="jumbotron jumbotron-blech3"></div>
                 </div>
                 <!-- transparent div with buttons -->
