klassiker jetzt auch eigene page

--- a/index.html
+++ b/index.html
@@ -193,15 +193,18 @@
 
                 <!-- mobile flex item 2 -->
                 <div class="container_media_side" id="hidden_desktop" role="img">
+                    <a href="indexKlassiker.html">
                     <img class="img-fluid rounded-circle" id="hidden_desktop" src="img/LogoStreicher.png" alt="">
-                    <p class="blocksatz bold">Streicher
+                    <p class="blocksatz bold">Klassikensemble
                         <br>Donnerstags, 18:30-21:00</p>
+                    </a>
                 </div>
 
                 <!-- desktop flex item 2 -->
 
                 <div class="container_side hidden_mobile" role="contentinfo">
-                    <p class="blocksatz bold">Streicher</p>
+                    <a href="indexKlassiker.html">
+                    <p class="blocksatz bold">Klassikensemble</p>
                     <div class="bild_logo " role="img">
                         <img class="img-fluid rounded-circle " src="img/LogoStreicher.png" alt="">
                     </div>
@@ -209,6 +212,7 @@
                     <p class="blocksatz">
                         Donnerstags, 18:30-21:00
                     </p>
+                    </a>
                 </div>
 
                 <!-- mobile flex item 3 -->
